--- a/package.json
+++ b/package.json
@@ -42,5 +42,13 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev": "^1.1.1",
     "webpack-dev-server": "^4.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.2",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
