Set up continuous integration
* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "nodemon ./server/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "build-ci": "webpack",
     "build-app": "webpack --watch",
     "build-style": "sass --watch public/assets/styles/input.scss:public/assets/styles/output.css",
     "fix-lock": "npm install --package-lock-only"
