Another fix for CI
* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* Final fix for CI actually checking PRs

* Fixed actions, added step, cleaned up linting

* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* Cleaning up actions file

* Testing another CI fix

* Fixed actions, added step, cleaned up linting

* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* Cleaning up actions fil

--- a/.github/workflows/mergeFlow.yml
+++ b/.github/workflows/mergeFlow.yml
@@ -1,18 +1,14 @@
 name: React CI
 
 on:
-  push:
-    branches:
-      - 'dev'
-      - 'prod'
   pull_request:
     branches:
-      - 'dev'
-      - 'prod'
-
+      - dev
+      - prod
 
 jobs:
   build:
+    name: Merge Test
     runs-on: ubuntu-latest
 
     strategy:
