--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,26 @@
         "react",
         "@typescript-eslint"
     ],
+    "settings": {
+        "import/resolver": {
+        "typescript": {}
+        }
+    },
     "rules": {
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+         ],
+         "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }],
+         "react/jsx-props-no-spreading": "off"
+        }
     }
-}
+
