--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "nodemon ./server/app.js",
+    "start": "nodemon ./server/app.ts",
     "test": "jest",
     "build-ci": "webpack",
     "build-app": "webpack --watch",
@@ -22,11 +22,8 @@
   },
   "homepage": "https://github.com/gregorymacat/Pinch#readme",
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@types/express": "^4.17.13",
     "axios": "^0.21.4",
-    "babel-loader": "^8.2.2",
     "bulma": "^0.9.3",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
@@ -36,6 +33,7 @@
     "passport": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
     "sass": "^1.41.0",
     "typescript": "^4.4.3",
@@ -45,14 +43,21 @@
     "webpack-dev-server": "^4.2.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.13",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1"
   }
 }
