Moved css folder, started component (#11)
* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* Final fix for CI actually checking PRs

* Fixed actions, added step, cleaned up linting

* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* Cleaning up actions file

* Testing another CI fix

* Fixed actions, added step, cleaned up linting

* Set up directories, webpack, react, and server

* Set up directories, webpack, react, and server

* Added sass and other packages

* Updating package-lock

* Fixed packagelock, and set up scripts

* Fixed merge conflict in gitignore

* adding actions

* added test suite, setting up the yml

* Fixing yml file

* Fixing webpack for yml

* Fixing webpack index entry point

* Fixing eslinter for app

* Figuring out extensions for building

* Added some tests to workflow

* Fixing github action

* Fixing github action

* Removing extra workflows

* 

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon ./server/app.ts",
     "test": "jest",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "build-ci": "webpack",
     "build-app": "webpack --watch",
     "build-style": "sass --watch public/assets/styles/input.scss:public/assets/styles/output.css",
