--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "nodemon ./server/app.ts",
+    "start": "nodemon ./server/index.js",
     "test": "jest",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "build-ci": "webpack",
@@ -24,10 +24,15 @@
   "homepage": "https://github.com/gregorymacat/Pinch#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^2.25.2",
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.5.3",
+    "express-session": "^1.17.2",
+    "graphql": "^15.6.0",
+    "graphql-passport": "^0.6.4",
     "jest": "^27.2.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
@@ -38,12 +43,15 @@
     "redis": "^3.1.2",
     "sass": "^1.41.0",
     "typescript": "^4.4.3",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev": "^1.1.1",
     "webpack-dev-server": "^4.2.1"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
