--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^2.25.2",
     "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "bulma": "^0.9.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "graphql-passport": "^0.6.4",
+    "hash-router": "^0.4.0",
     "jest": "^27.2.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
