--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "passport": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
