Added useContext and session storage (#39)
* Installed graphql, apollo, express-server and initialized server app.ts page

* Connected to localhost:4000/graphql, now attemtping to connect front end to graphql sever

* Created fetch route on handlesubmit to retreive graphql server user data, still testing

* Fixing package lock for graphql set up push`

* Successfully connected frontend to graphql

* Created currentUser & error states for future purposes. Currently the axios request is not handling errors properly due to how the the error is thrown on server side- need to fix this eventually

* Completely set up login authentication, cookie session, and hashrouter for refreshes

* Commenting out import due to ESLint error, but currently not important

* Commenting out import file ESLint error

* Disabling some unnecessary eslint errors

* Updated package lock

* Removing h1 tag

* Created Sign up page, styled it to match Login page, has links to login page, functionality 40% complete

* Minor changes to Sing up styling

* Implemented simple validation functions and subsequent error messaging on front end

* Added simple input validaiton for phone number + error messaging front end

* Created password checker modal for sign up page (validates & shows checklist completion on typing-

* styling for password checker modal

* Created additional information page (transition page between sign up and home page - not accessible through other means) styled but not functional yet

* Fixing merge conflicts

* Styled Header & navbar to match mock up

* Connected routes for home/overview when successfuly logged in and also log out paths

* Created and styled profile page and forms in settings - not functional yet

* Added button functionality to the tabs and created the Accounts page.

* Created notifcations page and settings page + styling. Notifications page still needs mobile styling

* Fixing width on header

* Fixed spacing 

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "graphql": "^15.6.0",
+    "framer-motion": "^5.2.1",
     "graphql-passport": "^0.6.4",
     "hash-router": "^0.4.0",
     "jest": "^27.2.0",
