--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-phone-input-2": "^2.14.0",
     "react-plaid-link": "^3.2.1",
     "react-router-dom": "^5.3.0",
+    "recharts": "^2.1.6",
     "redis": "^3.1.2",
     "sass": "^1.41.0",
     "typescript": "^4.4.3",
