--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.3",
+    "clearbit": "^1.3.5",
     "concurrently": "^6.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -45,6 +46,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
+    "npm": "^8.1.3",
     "passport": "^0.4.1",
     "plaid": "^9.4.0",
     "react": "^17.0.2",
